--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Visualization of London's 1854 cholera epidemic </title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script type="text/javascript" src="/build/dat.gui.min.js"></script>
+<script type="text/javascript" src="dat.gui.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
