--- a/index.html
+++ b/index.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
-<head><meta charset="utf-8">
-<title>Visualization of London's 1854 cholera epidemic </title>
+<head>
+    <meta charset="utf-8">
+    <title>London's 1854 cholera epidemic </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="format.css">
+    <script src="http://square.github.io/crossfilter/d3.v3.min.js"></script>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.1/dat.gui.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style>
-  body {
-    font-family: 'Helvetica Neue';
-    margin: 40px auto;
-    width: 960px;
-    min-height: 600px;
-  }
-  #body {
-    position: relative;
-  }
-  h1 {
-    font-size: 30px;
-    margin-top: 0;
-    margin-bottom:.6em;
-  }
-  .button {
-    background-color: #e7e7e7; color: black;
-    border: none;
-    padding: 6px 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-   }
-    .voronoi {
-	stroke: red;
-	fill: none;
-    }
-.hidden {
-	display: none;
-}
-</style>
+    <script src='http://square.github.io/crossfilter/crossfilter.v1.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
 <body>
-<div class="container-fluid">
-    <div class="row" align="center">
-        <h1>Visualization of London's 1854 Cholera Epidemic</h1>
-    </div> 
-    <a href="documentation.html">Documentation</a>
-<div class="row">
-<div class="col-sm-6" id="leftpanel">
-    <svg id="timechart"></svg>
-</div>
-<div class="col-sm-6" id="rightpanel">
-    <label id="form" for="show-voronoi">
-  			<input type="checkbox" id="show-voronoi" checked>
-  			Show Voronoi Polygons
-	</label>
-	<button class="button" id="zoom_in">+</button>
-	<button class="button" id="zoom_out">-</button>
-    <svg id="main" width="550" height="550" style="border: 0.5px solid rgb(192, 192, 192); touch-action: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);" ></svg>
-</div>
-</div>
-</div> 
-<script src="d3v.js"></script>
+    <div class="container-fluid">
+        <div class="row" align="center">
+            <h1>1854 London's Cholera Outbreak</h1>
+        </div>
+        <div class="row">
+                        <div class="col-sm-6" id="leftpanel">
+
+                <div id="legend" class="legend">                       
+                        <svg id="legends" width=400 height=70></svg>
+                        </div>
+                <div id="maindiv"></div>
+
+            </div>
+            <div class="col-sm-6" id="rightpanel">
+                <a href="documentation.html">Documentation</a>
+                <div id="charts">
+                                            <div id="date-chart" class="chart">
+                            <div class="title">Number of death per day</div>
+                        </div>
+                        <div id="age-chart" class="chart">
+                            <div class="title">Age Distribution</div>
+                        </div>
+                        <div id="gender-chart" class="chart">
+                            <div class="title">Gender Distribution</div>
+                        </div>
+
+
+                </div>
+                
+            </div>
+
+        </div>
+        <div class="row">
+        <div id="lists">
+          <div id="death-list" class="list"></div>
+        </div>
+        </div>
+        <script src="main.js"></script>
+    </div>
 </body>
+<footer>
+    <span style="float:right;">Wrote by Emma Z.
+  </span>
+    Copyright 2018
+
+</footer>
 </html>
