--- a/index.html
+++ b/index.html
@@ -22,19 +22,28 @@
                         <svg id="legends" width=400 height=70></svg>
                         </div>
                 <div id="maindiv"></div>
-
+                <div class="text">Click to see the deaths near each Pump</div>
+                 <div class="pumpbutton">
+                <button class="button" id="pump1">P1</button>
+                <button class="button" id="p2">P2</button>
+                <button class="button" id="p3">P3</button>
+                  </div>
             </div>
             <div class="col-sm-6" id="rightpanel">
                 <a href="documentation.html">Documentation</a>
                 <div id="charts">
-                                            <div id="date-chart" class="chart">
+                            <div id="date-chart" class="chart">
                             <div class="title">Number of death per day</div>
                         </div>
                         <div id="age-chart" class="chart">
                             <div class="title">Age Distribution</div>
+                            <span style="font-size: 10px">0 : 0 -10 yrs; 1 : 11-20 yrs; 2 : 21-40 yrs; 3 : 41-60 yrs; 4 : 61-80 yrs; 5 : >80 yrs</span>
                         </div>
                         <div id="gender-chart" class="chart">
                             <div class="title">Gender Distribution</div>
+                        </div>
+                        <div id="pump-chart" class="chart">
+                            <div class="title">Number of Deaths clustered by Pump</div>
                         </div>
 
 
