--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container-fluid">
         <div class="row" align="center">
-            <h1>1854 London's Cholera Outbreak</h1>
+            <h1>1854 London's Cholera Outbreak</h1></div>
+        <div class="row" align="right">
+                            <a href="documentation.html" >Visualization Documentation</a>
         </div>
         <div class="row">
                         <div class="col-sm-6" id="leftpanel">
@@ -23,21 +25,31 @@
                         </div>
                 <div id="maindiv"></div>
                 <div class="text">Click to see the deaths near each Pump</div>
-                 <div class="pumpbutton">
-                <button class="button" id="pump1">P1</button>
-                <button class="button" id="p2">P2</button>
-                <button class="button" id="p3">P3</button>
+                            
+                 <div id= "pumpbutton">
+                <button class="button button1" id="pump1">P1</button>
+                <button class="button button2" id="pump2">P2</button>
+                <button class="button button3" id="pump3">P3</button>
+                 <button class="button button4" id="pump4">P4</button>
+                     <button class="button button5" id="pump5">P5</button>
+                     <button class="button button6" id="pump6">P6</button>
+                     <button class="button button7" id="pump7">P7</button>
+                     <button class="button button8" id="pump8">P8</button>
+                     <button class="button button9" id="pump9">P9</button>
+                     <button class="button button10" id="pump10">P10</button>
+                     <button class="button button11" id="pump11">P11</button>
+                     <button class="button button12" id="pump12">P12</button>
+                     <button class="button button13" id="pump13">P13</button>
                   </div>
             </div>
             <div class="col-sm-6" id="rightpanel">
-                <a href="documentation.html">Documentation</a>
+
                 <div id="charts">
                             <div id="date-chart" class="chart">
                             <div class="title">Number of death per day</div>
                         </div>
                         <div id="age-chart" class="chart">
                             <div class="title">Age Distribution</div>
-                            <span style="font-size: 10px">0 : 0 -10 yrs; 1 : 11-20 yrs; 2 : 21-40 yrs; 3 : 41-60 yrs; 4 : 61-80 yrs; 5 : >80 yrs</span>
                         </div>
                         <div id="gender-chart" class="chart">
                             <div class="title">Gender Distribution</div>
