--- a/documentation.html
+++ b/documentation.html
@@ -37,7 +37,7 @@ body{
 <h1>Introduction:</h1>
 <p>This visualization is inspired by Dr. John Snow's contribution in London's cholera epidemic in 1854. Dr. John Snow is regarded as one of the founding fathers of modern epidemiology. During August 19 to Septempber 29,1854,  hundreds of people dead due to cholera. By creating the famous John Snow's Map, he found that cholera was spread through contaminated water, which contradicted the prevailing theory that diseasses were spread by "miasma" in the air.</p>
 
-<p>In this simplified map of London in 1854, each line represent a street, the main streets are labeled, the Water pumps are marked. Each dot represent a death, the shape and color correspond to different gender and age group. </p>
+<p>In this simplified map of London in 1854, each line represent a street, the main streets are labeled, the Water pumps are marked with black cross. Each dot represent a death, the shape and color correspond to different gender and age group. </p>
 
 <p>The death is clustered by its distance to the 13 water pumps. By clicking the Pump button, user can see the death near that water pump.
 </p>
