--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>London's 1854 cholera epidemic </title>
+    <title>Obesity Clinical Trial</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="format.css">
     <script src="http://square.github.io/crossfilter/d3.v3.min.js"></script>
-
     <script src='http://square.github.io/crossfilter/crossfilter.v1.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,19 +26,6 @@
                 <div class="text">Click to see the deaths near each Pump</div>
                             
                  <div id= "pumpbutton">
-                <button class="button button1" id="pump1">P1</button>
-                <button class="button button2" id="pump2">P2</button>
-                <button class="button button3" id="pump3">P3</button>
-                 <button class="button button4" id="pump4">P4</button>
-                     <button class="button button5" id="pump5">P5</button>
-                     <button class="button button6" id="pump6">P6</button>
-                     <button class="button button7" id="pump7">P7</button>
-                     <button class="button button8" id="pump8">P8</button>
-                     <button class="button button9" id="pump9">P9</button>
-                     <button class="button button10" id="pump10">P10</button>
-                     <button class="button button11" id="pump11">P11</button>
-                     <button class="button button12" id="pump12">P12</button>
-                     <button class="button button13" id="pump13">P13</button>
                   </div>
             </div>
             <div class="col-sm-6" id="rightpanel">
