--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row" align="center">
-            <h1>1854 London's Cholera Outbreak</h1></div>
+            <h1>Obesity in the US</h1></div>
         <div class="row" align="right">
                             <a href="documentation.html" >Visualization Documentation</a>
         </div>
@@ -23,11 +23,7 @@
                         <svg id="legends" width=400 height=70></svg>
                         </div>
                 <div id="maindiv"></div>
-                <div class="text">Click to see the deaths near each Pump</div>
-                            
-                 <div id= "pumpbutton">
-                  </div>
-            </div>
+
             <div class="col-sm-6" id="rightpanel">
 
                 <div id="charts">
