--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!document>
-
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -99,7 +98,10 @@
 		.legend-box {
 		  cursor: pointer;  
 		}
-
+        .overlay{
+        fill: none;
+        pointer-events:all;}
+        
 		#mouse-tracker {
 		  stroke: #E6E7E8;
 		  stroke-width: 1px;
@@ -132,7 +134,7 @@
 	</style>
 	<body>
 		<div class="container">
-			<h1><a href="" target="_blank">Obesity Visualization of Past Decades in the US</a></h1>
+			<h1><a href="" target="_blank">Obesity in US 2003-2017</a></h1>
 		</div>
 		
 		<div class="row" style="background-color: white;">
@@ -148,12 +150,12 @@
 				
 			</div>
 		</div>
-        <div class="row"><h3>Distribution of Clinical Trial Studies</h3></div>
+        <div class="row"><h3>Distribution of Clinical Trial Studies </h3></div>
         <div class="row">
   <div class="col-sm-3" id='condition'><h2>Co-studied Conditions</h2></div>
   <div class="col-sm-3" id='intervention'><h2>Interventions</h2></div>
   <div class="col-sm-3" id='type'><h2>Study Type</h2></div>
-  <div class="col-sm-3" id='enroll'><h2>Enrollment Trends</h2></div>
+  <div class="col-sm-3" id='enrollment'><h2>Enrollment Trends</h2></div>
 </div>
   <div class="row">
   <div class="col-sm-3" id='gender'><h2>Gender</h2></div>
@@ -163,5 +165,6 @@
 </div>
 		<script src="main.js"></script>
 		<script src="timeline.js"></script>
+        <script src="enrollment.js"></script>
 	</body>
 </html>
