--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 		
 		<div class="row" style="background-color: white;">
 			<div class="col-sm-6" id="usmap">
-				
+				<h3>Percent of Obese Adults (BMI of 30+)</h3>
 			</div>
 			<div class="col-sm-6" id="linechart">
-				
+				<h3>Adult Obesity Rate by State 2003-2017</h3>
 			</div>
 		</div>
 		<div class="row">
