--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
 				<h3>Percent of Obese Adults (BMI of 30+)</h3>
 			</div>
 			<div class="col-sm-6" id="linechart">
-				<h3>Adult Obesity Rate by State 2003-2017</h3>
+				
+				<select id = "dropdown">
+				<option value="Adult Obesity Rate by State 2003-2017.csv" selected="selected">Adult Obesity Rate by State 2003-2017</option>
+				<option value="Population by State 2003-2017.csv" >Population by State 2003-2017</option> 
+				<option value="Poor and Poverty Rate 2003-2017.csv">Poor and Poverty Rate 2003-2017</option>
+				<option value="Household Income 2003-2017.csv">Household Income 2003-2017</option>
+				 </select>   
 			</div>
 		</div>
 		<div class="row">
@@ -159,7 +165,7 @@
 </div>
   <div class="row">
   <div class="col-sm-3" id='gender'><h2>Gender</h2></div>
-  <div class="col-sm-3" id='age'><h2>Age</h2></div>
+  <div class="col-sm-3" id='age'><h2>Participants Age Group</h2></div>
   <div class="col-sm-3" id='phase'><h2>Study Phase</h2></div>
   <div class="col-sm-3" id='funder'><h2>Funded by</h2></div>
 </div>
