--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                 text-align: center;
                 margin: .5em .5em;
         }  
+        h4{
+            font-size: 18px;
+                margin: .5em .5em;
+        }  
+
+
 		/* Legend Position Style */
 		.legend {
 			position:absolute;
@@ -134,27 +140,36 @@
 	</style>
 	<body>
 		<div class="container">
-			<h1><a href="" target="_blank">Obesity in US 2003-2017</a></h1>
+			<h1>Obesity in US 2003-2017</h1>
 		</div>
-		
+		<div class="row" >
+			<div class="col-sm-6" align="right">
+                            <a href="documentation.pdf" >Visualization Document </a>
+                            </div>
+                            <div class="col-sm-6" align="left">
+                            <a href="https://youtu.be/G3wy9eLXDP8" > Video Demonstration</a>
+                            </div>
+        </div>
 		<div class="row" style="background-color: white;">
 			<div class="col-sm-6" id="usmap">
 				<h3>Percent of Obese Adults (BMI of 30+)</h3>
 			</div>
-			<div class="col-sm-6" id="linechart">
-				
-				<select id = "dropdown">
+			<div class="col-sm-6" id="linechart" align="center">
+				<h3>National Trends: Obesity and State Demograhic Statistics</h3>
+				<select id = "dropdown" STYLE="font-family : helvetica;
+ font-size : 14pt">
 				<option value="Adult Obesity Rate by State 2003-2017.csv" selected="selected">Adult Obesity Rate by State 2003-2017</option>
 				<option value="Population by State 2003-2017.csv" >Population by State 2003-2017</option> 
 				<option value="Poor and Poverty Rate 2003-2017.csv">Poor and Poverty Rate 2003-2017</option>
 				<option value="Household Income 2003-2017.csv">Household Income 2003-2017</option>
 				 </select>   
+
 			</div>
 		</div>
 		<div class="row">
-			<div id="timeline">
-				
+			<div align="left" id="timeline"><h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Move your mouse to different years to see the change above and below.</h4>	
 			</div>
+
 		</div>
         <div class="row"><h3>Distribution of Clinical Trial Studies </h3></div>
         <div class="row">
